dream big added

--- a/index.html
+++ b/index.html
@@ -17,10 +17,21 @@
             <h1><span class="orange-color">Rezwan</span>'s World!</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-            <a href="https://www.linkedin.com/in/rezwanul-islam-9593801a1/" target="_blank" class="hireme-button">Hire Me</a>
+            <a href="https://www.linkedin.com/in/rezwanul-islam-9593801a1/" target="_blank" class="link-button">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="./images/rezwan.png" alt="">
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="./images/rezwan2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become A Web Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a href="https://www.linkedin.com/in/rezwanul-islam-9593801a1/" target="_blank" class="link-button">Download Resume</a>
         </div>
     </section>
 </body>
